--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@
 }
 
 header{
-    background: url("image/header-bg.jpg") no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
+  background: url("image/header-bg.jpg") no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
 }
 
 header #sec1{
@@ -30,6 +30,8 @@ header h3{
     font-family: 'Times New Roman', Times, serif;
 }
 
+
+/* --------------- section PORTFOLIO --------------- */
 #services{
     height: 100vh;
     padding-top: 7rem;
@@ -45,3 +47,305 @@ ion-icon{
 #services h1{
     letter-spacing: 5px;
 }
+
+
+.gallery{
+    background-color: #FFF;
+    padding: 80px 0;
+}
+
+#portfolio img{
+    max-width: 100%;
+}
+
+.gallery img{
+    background-color: #FFF;
+    padding: 15px;
+    width: 100%;
+    box-shadow: 0 0 15 #262626;
+}
+
+#gallery-modal .modal-img{
+    width: 100%;
+
+}
+
+.group{
+    display: flex;
+    gap: 20PX;
+    justify-content: center;
+
+}
+
+#amazing img{
+    width: 30vh;
+    height: 30vh;
+    background-position: center;
+    background-size: cover;
+}
+
+.contain{
+    width: 35px;
+    height: 35px;
+    background-color: #262626;
+    border-radius: 100%;
+    cursor: pointer;
+
+}
+
+i{
+    margin-top: 10px;
+    
+}
+
+.contain:hover{
+    overflow: hidden;
+    transform: scale(1.1);
+    background-color: rgb(40, 40, 40);
+}
+
+.btn{
+    width: 20%;
+    height: 10vh;
+}
+
+.groupe{
+    display: flex;
+    gap: 20PX;
+    justify-content: center;
+
+}
+.containe{
+    width: 35px;
+    height: 35px;
+    background-color: #262626;
+    border-radius: 100%;
+    cursor: pointer;
+
+}
+a{
+    text-decoration: none;
+    color: #262626;
+    margin: 20px;
+}
+
+i{
+    margin-top: 10px;
+    
+}
+
+.containe:hover{
+    overflow: hidden;
+    transform: scale(1.1);
+    background-color: rgb(40, 40, 40);
+}
+
+.time-line{
+    width: 1000px;
+    margin: 100px auto;
+    position: relative;
+    background-color: green;
+}
+
+#About .container{
+    width: 50%;
+    position: relative;
+    background-color: red;
+    padding: 10px 20px;
+}
+
+.text-content{
+    padding: 20px 30px;
+}
+
+.text-content h2{
+    font-size: 23px;
+}
+
+.text-content p{
+    font-size: 13px;
+    margin-top: 20px;
+}
+
+#About .container:nth-child(even){
+    right: 50%;
+}
+
+#Contact{
+  background-image: url("image/map-image.png");
+  background-color: #262626;
+}
+
+button{
+  cursor: pointer;
+}
+
+.timeline {
+    position: relative;
+    padding: 0;
+    list-style: none;
+  }
+  .timeline:before {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 40px;
+    width: 2px;
+    margin-left: -1.5px;
+    content: "";
+    background-color: #e9ecef;
+  }
+  .timeline > li {
+    position: relative;
+    min-height: 50px;
+    margin-bottom: 50px;
+  }
+  .timeline > li:after, .timeline > li:before {
+    display: table;
+    content: " ";
+  }
+  .timeline > li:after {
+    clear: both;
+  }
+  .timeline > li .timeline-panel {
+    position: relative;
+    float: right;
+    width: 100%;
+    padding: 0 20px 0 100px;
+    text-align: left;
+  }
+  .timeline > li .timeline-panel:before {
+    right: auto;
+    left: -15px;
+    border-right-width: 15px;
+    border-left-width: 0;
+  }
+  .timeline > li .timeline-panel:after {
+    right: auto;
+    left: -14px;
+    border-right-width: 14px;
+    border-left-width: 0;
+  }
+  .timeline > li .timeline-image {
+    position: absolute;
+    z-index: 100;
+    left: 0;
+    width: 80px;
+    height: 80px;
+    margin-left: 0;
+    text-align: center;
+    color: white;
+    border: 7px solid #e9ecef;
+    border-radius: 100%;
+    background-color: #ffc800;
+  }
+  .timeline > li .timeline-image h4, .timeline > li .timeline-image .h4 {
+    font-size: 10px;
+    line-height: 14px;
+    margin-top: 12px;
+  }
+  .timeline > li.timeline-inverted > .timeline-panel {
+    float: right;
+    padding: 0 20px 0 100px;
+    text-align: left;
+  }
+  .timeline > li.timeline-inverted > .timeline-panel:before {
+    right: auto;
+    left: -15px;
+    border-right-width: 15px;
+    border-left-width: 0;
+  }
+  .timeline > li.timeline-inverted > .timeline-panel:after {
+    right: auto;
+    left: -14px;
+    border-right-width: 14px;
+    border-left-width: 0;
+  }
+  .timeline > li:last-child {
+    margin-bottom: 0;
+  }
+  .timeline .timeline-heading h4, .timeline .timeline-heading .h4 {
+    margin-top: 0;
+    color: inherit;
+  }
+  .timeline .timeline-heading h4.subheading, .timeline .timeline-heading .subheading.h4 {
+    text-transform: none;
+  }
+  .timeline .timeline-body > ul,
+  .timeline .timeline-body > p {
+    margin-bottom: 0;
+  }
+  
+  @media (min-width: 768px) {
+    .timeline:before {
+      left: 50%;
+    }
+    .timeline > li {
+      min-height: 100px;
+      margin-bottom: 100px;
+    }
+    .timeline > li .timeline-panel {
+      float: left;
+      width: 41%;
+      padding: 0 20px 20px 30px;
+      text-align: right;
+    }
+    .timeline > li .timeline-image {
+      left: 50%;
+      width: 100px;
+      height: 100px;
+      margin-left: -50px;
+    }
+    .timeline > li .timeline-image h4, .timeline > li .timeline-image .h4 {
+      font-size: 13px;
+      line-height: 18px;
+      margin-top: 16px;
+    }
+    .timeline > li.timeline-inverted > .timeline-panel {
+      float: right;
+      padding: 0 30px 20px 20px;
+      text-align: left;
+    }
+  }
+  @media (min-width: 992px) {
+    .timeline > li {
+      min-height: 150px;
+    }
+    .timeline > li .timeline-panel {
+      padding: 0 20px 20px;
+    }
+    .timeline > li .timeline-image {
+      width: 150px;
+      height: 150px;
+      margin-left: -75px;
+    }
+    .timeline > li .timeline-image h4, .timeline > li .timeline-image .h4 {
+      font-size: 18px;
+      line-height: 26px;
+      margin-top: 30px;
+    }
+    .timeline > li.timeline-inverted > .timeline-panel {
+      padding: 0 20px 20px;
+    }
+  }
+  @media (min-width: 1200px) {
+    .timeline > li {
+      min-height: 170px;
+    }
+    .timeline > li .timeline-panel {
+      padding: 0 20px 20px 100px;
+    }
+    .timeline > li .timeline-image {
+      width: 170px;
+      height: 170px;
+      margin-left: -85px;
+    }
+    .timeline > li .timeline-image h4, .timeline > li .timeline-image .h4 {
+      margin-top: 40px;
+    }
+    .timeline > li.timeline-inverted > .timeline-panel {
+      padding: 0 100px 20px 20px;
+    }
+}
+
+
